--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,13 @@
 version: '3'
 
 services:
-  app:
-    build: .
-    container_name: shop-app
-    ports:
-      - "3333:3333" 
-    volumes:
-      - .:/home/node/app
-    depends_on:
-      - db
-      - redis
-    environment:
-        - DATABASE_HOST=db
-        - DATABASE_PORT=5432
-
   db:
-    build: .docker/postgres
+    image: postgres:14
     container_name: shop-db
     restart: always
     tty: true
     ports:
-      - "5433:5432"
+      - '5434:5432'
     volumes:
       - .docker/dbdata:/var/lib/postgresql/data
     environment:
@@ -34,7 +20,7 @@ services:
     container_name: shop-redis
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
-      
+
   pgadmin:
     image: dpage/pgadmin4
     container_name: shop-pgadmin
@@ -43,7 +29,6 @@ services:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=admin
     ports:
-      - "8000:80"
+      - '8000:80'
     depends_on:
       - db
-  
