--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,14 +1,14 @@
 {
-    "type": "postgres",
-    "host": "localhost",
-    "port": 5433,
-    "username": "postgres",
-    "password": "postgres",
-    "database": "shop-db",
-    "migrations": [
-        "./src/shared/typeorm/migrations/*.ts"
-    ],
-    "cli": {
-        "migrationsDir": "./src/shared/typeorm/migrations"
-    }
+  "type": "postgres",
+  "host": "localhost",
+  "port": 5434,
+  "username": "postgres",
+  "password": "postgres",
+  "database": "shop-db",
+  "synchronize": true,
+  "migrations": ["./src/shared/typeorm/migrations/*.ts"],
+  "entities": ["./src/modules/**/typeorm/entities/*.ts"],
+  "cli": {
+    "migrationsDir": "./src/shared/typeorm/migrations"
+  }
 }
