--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
