--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nodemailer": "^6.8.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "typeorm-pagination": "^2.0.3"
   }
 }
