--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "http-status-codes": "^2.2.0",
+    "ioredis": "^5.2.4",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "pg": "^8.7.1",
+    "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.41",
+    "typeorm": "^0.3.11",
     "typeorm-pagination": "^2.0.3"
   }
 }
