--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "aws-sdk": "^2.1286.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "celebrate": "^15.0.1",
@@ -48,6 +49,7 @@
     "http-status-codes": "^2.2.0",
     "ioredis": "^5.2.4",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "pg": "^8.7.1",
