--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "typeorm": "npx ts-node ./node_modules/typeorm/cli.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "lint": "eslint . --ext .ts --fix"
   },
@@ -25,6 +25,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/http-status-codes": "^1.2.0",
+    "@types/jest": "^29.2.5",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
@@ -37,7 +38,9 @@
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.2.0",
+    "jest": "^29.3.1",
     "prettier": "^2.5.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
